--- a/packages/cli/npm/win32-ia32-msvc/package.json
+++ b/packages/cli/npm/win32-ia32-msvc/package.json
@@ -1,47 +1,47 @@
 {
-	"name": "@tauri-apps/cli-win32-ia32-msvc",
-	"version": "0.0.1",
-	"private": false,
+	"author": {
+		"email": "Source/Open@Editor.Land",
+		"name": "🖋️ Source — 👐🏻 Open —",
+		"url": "HTTPS://Editor.Land"
+	},
+	"bugs": {
+		"url": "HTTPS://GitHub.Com/CodeEditorLand/Tauri/issues"
+	},
+	"contributors": [
+		"Tauri Programme within The Commons Conservancy"
+	],
+	"cpu": [
+		"ia32"
+	],
+	"devDependencies": {
+		"@playform/build": "0.1.9"
+	},
+	"files": [
+		"cli.win32-ia32-msvc.node"
+	],
+	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/Tauri#readme",
 	"keywords": [
 		"codeeditorland",
 		"land",
 		"playform"
 	],
-	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/Tauri#readme",
-	"bugs": {
-		"url": "HTTPS://GitHub.Com/CodeEditorLand/Tauri/issues"
+	"license": "SEE LICENSE IN LICENSE",
+	"main": "cli.win32-ia32-msvc.node",
+	"name": "@tauri-apps/cli-win32-ia32-msvc",
+	"os": [
+		"win32"
+	],
+	"private": false,
+	"publishConfig": {
+		"access": "public"
 	},
 	"repository": {
 		"type": "git",
 		"url": "git+HTTPS://github.com/CodeEditorLand/Tauri.git"
 	},
-	"license": "SEE LICENSE IN LICENSE",
-	"author": {
-		"name": "🖋️ Source — 👐🏻 Open —",
-		"email": "Source/Open@Editor.Land",
-		"url": "HTTPS://Editor.Land"
-	},
-	"contributors": [
-		"Tauri Programme within The Commons Conservancy"
-	],
-	"type": "module",
-	"main": "cli.win32-ia32-msvc.node",
-	"files": [
-		"cli.win32-ia32-msvc.node"
-	],
 	"scripts": {
 		"prepublishOnly": "Build 'Source/**/*.ts'"
 	},
-	"devDependencies": {
-		"@playform/build": "0.1.9"
-	},
-	"os": [
-		"win32"
-	],
-	"cpu": [
-		"ia32"
-	],
-	"publishConfig": {
-		"access": "public"
-	}
+	"type": "module",
+	"version": "0.0.1"
 }
