--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -13,10 +13,10 @@
 	"description": "Tauri API definitions",
 	"devDependencies": {
 		"@playform/build": "0.1.9",
-		"@types/node": "22.9.0",
+		"@types/node": "22.9.1",
 		"fast-glob": "3.3.2",
-		"globals": "^15.4.0",
-		"tslib": "^2.6.3"
+		"globals": "15.12.0",
+		"tslib": "2.8.1"
 	},
 	"exports": {
 		".": {
