--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,7 +41,7 @@ authors = ["Tauri Programme within The Commons Conservancy"]
 homepage = "https://tauri.app/"
 repository = "https://github.com/tauri-apps/tauri"
 categories = ["gui", "web-programming"]
-license = "Apache-2.0 OR MIT"
+license-file = "LICENSE"
 edition = "2021"
 rust-version = "1.77.2"
 
