--- a/bench/Cargo.toml
+++ b/bench/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Tauri Programme within The Commons Conservancy"]
 edition = "2021"
 rust-version = "1.77.2"
-license = "Apache-2.0 OR MIT"
+license-file = "LICENSE"
 description = "Cross-platform WebView rendering library"
 repository = "https://github.com/tauri-apps/wry"
 
