--- a/crates/tauri-cli/Cargo.toml
+++ b/crates/tauri-cli/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Tauri Programme within The Commons Conservancy"]
 edition = "2021"
 rust-version = "1.77.2"
 categories = ["gui", "web-programming"]
-license = "Apache-2.0 OR MIT"
+license-file = "LICENSE"
 homepage = "https://tauri.app"
 repository = "https://github.com/tauri-apps/tauri"
 description = "Command line interface for building Tauri apps"
