--- a/crates/tauri-driver/Cargo.toml
+++ b/crates/tauri-driver/Cargo.toml
@@ -3,7 +3,7 @@ name = "tauri-driver"
 version = "2.0.1"
 authors = ["Tauri Programme within The Commons Conservancy"]
 categories = ["gui", "web-programming"]
-license = "Apache-2.0 OR MIT"
+license-file = "LICENSE"
 homepage = "https://tauri.app"
 repository = "https://github.com/tauri-apps/tauri"
 description = "Webdriver server for Tauri applications"
