--- a/crates/tauri-macos-sign/Cargo.toml
+++ b/crates/tauri-macos-sign/Cargo.toml
@@ -2,7 +2,7 @@
 name = "tauri-macos-sign"
 version = "2.0.1"
 authors = ["Tauri Programme within The Commons Conservancy"]
-license = "Apache-2.0 OR MIT"
+license-file = "LICENSE"
 keywords = ["codesign", "signing", "macos", "ios", "tauri"]
 repository = "https://github.com/tauri-apps/tauri"
 description = "Code signing utilities for macOS and iOS apps"
