--- a/examples/api/src-tauri/Cargo.toml
+++ b/examples/api/src-tauri/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "An example Tauri Application showcasing the api"
 edition = "2021"
 rust-version = "1.77.2"
-license = "Apache-2.0 OR MIT"
+license-file = "LICENSE"
 
 [lib]
 name = "api_lib"
