--- a/crates/tauri-bundler/Cargo.toml
+++ b/crates/tauri-bundler/Cargo.toml
@@ -18,38 +18,38 @@ exclude = ["CHANGELOG.md", "/target", "rustfmt.toml"]
 tauri-utils = { version = "2.1.0", path = "../tauri-utils", features = [
 	"resources",
 ] }
-image = "0.25.0"
-flate2 = "1.0"
-anyhow = "1.0"
-thiserror = "2"
-serde_json = "1.0"
+image = { version = "0.25.0" }
+flate2 = { version = "1.0" }
+anyhow = { version = "1.0" }
+thiserror = { version = "2" }
+serde_json = { version = "1.0" }
 serde = { version = "1.0", features = ["derive"] }
-strsim = "0.11.0"
-tar = "0.4.40"
-walkdir = "2"
-handlebars = "6"
-tempfile = "3.10.1"
+strsim = { version = "0.11.0" }
+tar = { version = "0.4.40" }
+walkdir = { version = "2" }
+handlebars = { version = "6" }
+tempfile = { version = "3.10.1" }
 log = { version = "0.4.21", features = ["kv"] }
-dirs = "5"
-os_pipe = "1"
+dirs = { version = "5" }
+os_pipe = { version = "1" }
 ureq = { version = "2.9.6", default-features = false, features = [
 	"socks-proxy",
 ] }
 native-tls = { version = "0.2", optional = true }
-hex = "0.4"
-semver = "1"
-sha1 = "0.10"
-sha2 = "0.10"
+hex = { version = "0.4" }
+semver = { version = "1" }
+sha1 = { version = "0.10" }
+sha2 = { version = "0.10" }
 zip = { version = "2.0", default-features = false, features = ["deflate"] }
-dunce = "1"
-url = "2"
+dunce = { version = "1" }
+url = { version = "2" }
 uuid = { version = "1", features = ["v4", "v5"] }
-regex = "1"
+regex = { version = "1" }
 
 [target."cfg(target_os = \"windows\")".dependencies]
-bitness = "0.4"
+bitness = { version = "0.4" }
 windows-registry = "0.3.0"
-glob = "0.3"
+glob = { version = "0.3" }
 
 [target."cfg(target_os = \"windows\")".dependencies.windows-sys]
 version = "0.59"
@@ -58,14 +58,14 @@ features = ["Win32_System_SystemInformation", "Win32_System_Diagnostics_Debug"]
 [target."cfg(target_os = \"macos\")".dependencies]
 icns = { package = "tauri-icns", version = "0.1" }
 time = { version = "0.3", features = ["formatting"] }
-plist = "1"
+plist = { version = "1" }
 tauri-macos-sign = { version = "2.0.1", path = "../tauri-macos-sign" }
 
 [target."cfg(target_os = \"linux\")".dependencies]
-heck = "0.5"
-ar = "0.9.0"
-md5 = "0.7.0"
-rpm = "0.15.0"
+heck = { version = "0.5" }
+ar = { version = "0.9.0" }
+md5 = { version = "0.7.0" }
+rpm = { version = "0.15.0" }
 
 [lib]
 name = "tauri_bundler"
