--- a/crates/tauri-codegen/Cargo.toml
+++ b/crates/tauri-codegen/Cargo.toml
@@ -13,31 +13,31 @@ edition.workspace = true
 rust-version.workspace = true
 
 [dependencies]
-sha2 = "0.10"
-base64 = "0.22"
+sha2 = { version = "0.10" }
+base64 = { version = "0.22" }
 proc-macro2 = "1"
-quote = "1"
-syn = "2"
+quote = { version = "1" }
+syn = { version = "2" }
 serde = { version = "1", features = ["derive"] }
-serde_json = "1"
+serde_json = { version = "1" }
 tauri-utils = { version = "2.1.0", path = "../tauri-utils", features = [
 	"build",
 ] }
-thiserror = "2"
-walkdir = "2"
+thiserror = { version = "2" }
+walkdir = { version = "2" }
 brotli = { version = "7", optional = true, default-features = false, features = [
 	"std",
 ] }
 regex = { version = "1", optional = true }
 uuid = { version = "1", features = ["v4"] }
-semver = "1"
-ico = "0.3"
-png = "0.17"
+semver = { version = "1" }
+ico = { version = "0.3" }
+png = { version = "0.17" }
 json-patch = "3.0"
-url = "2"
+url = { version = "2" }
 
 [target."cfg(target_os = \"macos\")".dependencies]
-plist = "1"
+plist = { version = "1" }
 time = { version = "0.3", features = ["parsing", "formatting"] }
 
 [features]
