--- a/crates/tauri-driver/Cargo.toml
+++ b/crates/tauri-driver/Cargo.toml
@@ -12,7 +12,7 @@ edition = "2021"
 rust-version = "1.77.2"
 
 [dependencies]
-anyhow = "1"
+anyhow = { version = "1" }
 hyper = { version = "0.14", features = [
 	"client",
 	"http1",
@@ -21,13 +21,13 @@ hyper = { version = "0.14", features = [
 	"stream",
 	"tcp",
 ] }
-futures = "0.3"
+futures = { version = "0.3" }
 futures-util = "0.3"
 pico-args = "0.4"
 serde = { version = "1", features = ["derive"] }
-serde_json = "1"
+serde_json = { version = "1" }
 tokio = { version = "1", features = ["macros"] }
-which = "4"
+which = { version = "4" }
 
 [target."cfg(unix)".dependencies]
 signal-hook = "0.3"
