--- a/crates/tauri-macos-sign/Cargo.toml
+++ b/crates/tauri-macos-sign/Cargo.toml
@@ -10,17 +10,17 @@ edition = "2021"
 rust-version = "1.77.2"
 
 [dependencies]
-anyhow = "1"
+anyhow = { version = "1" }
 serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-tempfile = "3"
+serde_json = { version = "1" }
+tempfile = { version = "3" }
 x509-certificate = "0.23"
 once-cell-regex = "0.2"
-os_pipe = "1"
-plist = "1"
-rand = "0.8"
+os_pipe = { version = "1" }
+plist = { version = "1" }
+rand = { version = "0.8" }
 dirs-next = "2"
 log = { version = "0.4.21", features = ["kv"] }
 apple-codesign = "0.27"
-chrono = "0.4.38"
-p12 = "0.6"
+chrono = { version = "0.4.38" }
+p12 = { version = "0.6" }
