--- a/crates/tauri-macros/Cargo.toml
+++ b/crates/tauri-macros/Cargo.toml
@@ -17,9 +17,9 @@ proc-macro = true
 
 [dependencies]
 proc-macro2 = { version = "1", features = ["span-locations"] }
-quote = "1"
+quote = { version = "1" }
 syn = { version = "2", features = ["full"] }
-heck = "0.5"
+heck = { version = "0.5" }
 tauri-codegen = { version = "2.0.3", default-features = false, path = "../tauri-codegen" }
 tauri-utils = { version = "2.1.0", path = "../tauri-utils" }
 
