--- a/crates/tauri-runtime-wry/Cargo.toml
+++ b/crates/tauri-runtime-wry/Cargo.toml
@@ -27,10 +27,10 @@ tao = { version = "0.30.8", default-features = false, features = ["rwh_06"] }
 tauri-runtime = { version = "2.2.0", path = "../tauri-runtime" }
 tauri-utils = { version = "2.1.0", path = "../tauri-utils" }
 raw-window-handle = "0.6"
-http = "1.1"
-url = "2"
+http = { version = "1.1" }
+url = { version = "2" }
 tracing = { version = "0.1", optional = true }
-log = "0.4"
+log = { version = "0.4" }
 
 [target."cfg(windows)".dependencies]
 webview2-com = "0.33"
@@ -46,7 +46,7 @@ webkit2gtk = { version = "=2.0", features = ["v2_40"] }
 percent-encoding = "2.1"
 
 [target.'cfg(target_vendor = "apple")'.dependencies]
-objc2 = "0.5.2"
+objc2 = { version = "0.5.2" }
 
 [target.'cfg(target_os = "macos")'.dependencies]
 objc2-foundation = { version = "0.2.2", features = [] }
@@ -60,7 +60,7 @@ objc2-app-kit = { version = "0.2.2", features = [
 ] }
 
 [target."cfg(target_os = \"android\")".dependencies]
-jni = "0.21"
+jni = { version = "0.21" }
 
 [features]
 devtools = ["wry/devtools", "tauri-runtime/devtools"]
