--- a/crates/tauri-runtime/Cargo.toml
+++ b/crates/tauri-runtime/Cargo.toml
@@ -27,10 +27,10 @@ targets = [
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-thiserror = "2"
+serde_json = { version = "1.0" }
+thiserror = { version = "2" }
 tauri-utils = { version = "2.1.0", path = "../tauri-utils" }
-http = "1.1"
+http = { version = "1.1" }
 raw-window-handle = "0.6"
 url = { version = "2" }
 dpi = { version = "0.1", features = ["serde"] }
@@ -43,10 +43,10 @@ features = ["Win32_Foundation"]
 gtk = { version = "0.18", features = ["v3_24"] }
 
 [target."cfg(target_os = \"android\")".dependencies]
-jni = "0.21"
+jni = { version = "0.21" }
 
 [target."cfg(target_os = \"macos\")".dependencies]
-url = "2"
+url = { version = "2" }
 
 [features]
 devtools = []
