--- a/crates/tauri-schema-generator/Cargo.toml
+++ b/crates/tauri-schema-generator/Cargo.toml
@@ -8,5 +8,5 @@ publish = false
 tauri-utils = { features = ["schema"], path = "../tauri-utils" }
 schemars = { version = "0.8", features = ["url", "preserve_order"] }
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+serde_json = { version = "1.0" }
 url = { version = "2.3", features = ["serde"] }
