--- a/crates/tauri-schema-worker/Cargo.toml
+++ b/crates/tauri-schema-worker/Cargo.toml
@@ -15,4 +15,4 @@ axum = { version = "0.7", default-features = false }
 tower-service = "0.3"
 semver = { version = "1.0", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
-anyhow = "1.0"
+anyhow = { version = "1.0" }
