--- a/crates/tauri-utils/Cargo.toml
+++ b/crates/tauri-utils/Cargo.toml
@@ -14,46 +14,46 @@ rust-version.workspace = true
 
 [dependencies]
 serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-thiserror = "2"
+serde_json = { version = "1" }
+thiserror = { version = "2" }
 phf = { version = "0.11", features = ["macros"] }
 brotli = { version = "7", optional = true, default-features = false, features = [
 	"std",
 ] }
 url = { version = "2", features = ["serde"] }
-html5ever = "0.26"
+html5ever = { version = "0.26" }
 kuchiki = { package = "kuchikiki", version = "0.8" }
 proc-macro2 = { version = "1", optional = true }
 quote = { version = "1", optional = true }
 schemars = { version = "0.8.18", features = ["url", "uuid1"], optional = true }
-serde_with = "3"
+serde_with = { version = "3" }
 aes-gcm = { version = "0.10", optional = true }
 getrandom = { version = "0.2", optional = true, features = ["std"] }
 serialize-to-javascript = { version = "=0.1.1", optional = true }
-ctor = "0.2"
+ctor = { version = "0.2" }
 json5 = { version = "0.4", optional = true }
 toml = { version = "0.8", features = ["parse"] }
 json-patch = "3.0"
-glob = "0.3"
-urlpattern = "0.3"
-regex = "1"
+glob = { version = "0.3" }
+urlpattern = { version = "0.3" }
+regex = { version = "1" }
 walkdir = { version = "2", optional = true }
-memchr = "2"
-semver = "1"
-infer = "0.16"
-dunce = "1"
-log = "0.4.21"
+memchr = { version = "2" }
+semver = { version = "1" }
+infer = { version = "0.16" }
+dunce = { version = "1" }
+log = { version = "0.4.21" }
 cargo_metadata = { version = "0.18", optional = true }
 serde-untagged = "0.1"
 uuid = { version = "1", features = ["serde"] }
-http = "1.1.0"
+http = { version = "1.1.0" }
 
 [target."cfg(target_os = \"macos\")".dependencies]
 swift-rs = { version = "1.0.7", optional = true, features = ["build"] }
 
 [dev-dependencies]
 getrandom = { version = "0.2", features = ["std"] }
-serial_test = "3.1"
+serial_test = { version = "3.1" }
 
 [features]
 build = ["proc-macro2", "quote", "cargo_metadata", "schema", "swift-rs"]
