--- a/crates/tauri/Cargo.toml
+++ b/crates/tauri/Cargo.toml
@@ -54,19 +54,19 @@ tokio = { version = "1", features = [
 ] }
 futures-util = "0.3"
 uuid = { version = "1", features = ["v4"], optional = true }
-url = "2"
-anyhow = "1.0"
-thiserror = "2"
+url = { version = "2" }
+anyhow = { version = "1.0" }
+thiserror = { version = "2" }
 tauri-runtime = { version = "2.2.0", path = "../tauri-runtime" }
 tauri-macros = { version = "2.0.3", path = "../tauri-macros" }
 tauri-utils = { version = "2.1.0", features = [
 	"resources",
 ], path = "../tauri-utils" }
 tauri-runtime-wry = { version = "2.2.0", path = "../tauri-runtime-wry", optional = true }
-getrandom = "0.2"
-serde_repr = "0.1"
-http = "1.1"
-dirs = "5"
+getrandom = { version = "0.2" }
+serde_repr = { version = "0.1" }
+http = { version = "1.1" }
+dirs = { version = "5" }
 percent-encoding = "2.3"
 reqwest = { version = "0.12", default-features = false, features = [
 	"json",
@@ -74,17 +74,17 @@ reqwest = { version = "0.12", default-features = false, features = [
 ] }
 bytes = { version = "1", features = ["serde"] }
 raw-window-handle = { version = "0.6", features = ["std"] }
-glob = "0.3"
-urlpattern = "0.3"
-mime = "0.3"
+glob = { version = "0.3" }
+urlpattern = { version = "0.3" }
+mime = { version = "0.3" }
 data-url = { version = "0.3", optional = true }
 serialize-to-javascript = "=0.1.1"
 image = { version = "0.25", default-features = false, optional = true }
 http-range = { version = "0.1.5", optional = true }
 tracing = { version = "0.1", optional = true }
-heck = "0.5"
-log = "0.4"
-dunce = "1"
+heck = { version = "0.5" }
+log = { version = "0.4" }
+dunce = { version = "1" }
 specta = { version = "^2.0.0-rc.16", optional = true, default-features = false, features = [
 	"function",
 	"derive",
@@ -102,9 +102,9 @@ webkit2gtk = { version = "=2.0.1", features = ["v2_40"] }
 
 # macOS
 [target.'cfg(target_os = "macos")'.dependencies]
-embed_plist = "1.2"
-plist = "1"
-objc2 = "0.5.2"
+embed_plist = { version = "1.2" }
+plist = { version = "1" }
+objc2 = { version = "0.5.2" }
 objc2-foundation = { version = "0.2.2", features = ["NSData", "NSThread"] }
 objc2-app-kit = { version = "0.2.2", features = [
 	"NSApplication",
@@ -125,29 +125,29 @@ version = "0.58"
 features = ["Win32_Foundation"]
 
 [target."cfg(target_os = \"android\")".dependencies]
-jni = "0.21"
+jni = { version = "0.21" }
 
 # UIKit, i.e. iOS/tvOS/watchOS/visionOS
 [target.'cfg(all(target_vendor = "apple", not(target_os = "macos")))'.dependencies]
-libc = "0.2"
+libc = { version = "0.2" }
 swift-rs = "1.0.7"
 
 [build-dependencies]
-heck = "0.5"
+heck = { version = "0.5" }
 tauri-build = { path = "../tauri-build/", default-features = false, version = "2.0.3" }
 tauri-utils = { path = "../tauri-utils/", version = "2.1.0", features = [
 	"build",
 ] }
 
 [dev-dependencies]
-proptest = "1.4.0"
-quickcheck = "1.0.3"
-quickcheck_macros = "1.0.0"
+proptest = { version = "1.4.0" }
+quickcheck = { version = "1.0.3" }
+quickcheck_macros = { version = "1.0.0" }
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+serde_json = { version = "1.0" }
 tauri = { path = ".", default-features = false, features = ["wry"] }
 tokio = { version = "1", features = ["full"] }
-cargo_toml = "0.17"
+cargo_toml = { version = "0.17" }
 http-range = "0.1.5"
 
 # macOS
