--- a/examples/api/src-tauri/Cargo.toml
+++ b/examples/api/src-tauri/Cargo.toml
@@ -17,10 +17,10 @@ tauri-build = { path = "../../../crates/tauri-build", features = [
 ] }
 
 [dependencies]
-serde_json = "1.0"
+serde_json = { version = "1.0" }
 serde = { version = "1.0", features = ["derive"] }
-tiny_http = "0.11"
-log = "0.4"
+tiny_http = { version = "0.11" }
+log = { version = "0.4" }
 tauri-plugin-sample = { path = "./tauri-plugin-sample/" }
 tauri-plugin-log = "2.0.0-rc"
 
