--- a/examples/api/src-tauri/tauri-plugin-sample/Cargo.toml
+++ b/examples/api/src-tauri/tauri-plugin-sample/Cargo.toml
@@ -6,9 +6,9 @@ links = "tauri-plugin-sample"
 
 [dependencies]
 tauri = { path = "../../../../crates/tauri" }
-log = "0.4"
-serde = "1"
-thiserror = "2"
+log = { version = "0.4" }
+serde = { version = "1" }
+thiserror = { version = "2" }
 
 [build-dependencies]
 tauri-plugin = { path = "../../../../crates/tauri-plugin", features = [
