--- a/examples/file-associations/src-tauri/Cargo.toml
+++ b/examples/file-associations/src-tauri/Cargo.toml
@@ -9,7 +9,7 @@ rust-version = "1.77.2"
 tauri-build = { path = "../../../crates/tauri-build", features = ["codegen"] }
 
 [dependencies]
-serde_json = "1.0"
+serde_json = { version = "1.0" }
 serde = { version = "1.0", features = ["derive"] }
 tauri = { path = "../../../crates/tauri", features = [] }
-url = "2"
+url = { version = "2" }
