--- a/packages/cli/npm/darwin-x64/package.json
+++ b/packages/cli/npm/darwin-x64/package.json
@@ -13,6 +13,7 @@
 	"cpu": [
 		"x64"
 	],
+	"dependencies": {},
 	"devDependencies": {
 		"@playform/build": "0.2.0"
 	},
@@ -27,7 +28,7 @@
 	],
 	"license": "SEE LICENSE IN LICENSE",
 	"main": "cli.darwin-x64.node",
-	"name": "@tauri-apps/cli-darwin-x64",
+	"name": "@codeeditorland/cli-darwin-x64",
 	"os": [
 		"darwin"
 	],
