--- a/packages/cli/npm/linux-arm64-musl/package.json
+++ b/packages/cli/npm/linux-arm64-musl/package.json
@@ -13,6 +13,7 @@
 	"cpu": [
 		"arm64"
 	],
+	"dependencies": {},
 	"devDependencies": {
 		"@playform/build": "0.2.0"
 	},
@@ -30,7 +31,7 @@
 	],
 	"license": "SEE LICENSE IN LICENSE",
 	"main": "cli.linux-arm64-musl.node",
-	"name": "@tauri-apps/cli-linux-arm64-musl",
+	"name": "@codeeditorland/cli-linux-arm64-musl",
 	"os": [
 		"linux"
 	],
