--- a/packages/cli/npm/win32-x64-msvc/package.json
+++ b/packages/cli/npm/win32-x64-msvc/package.json
@@ -13,6 +13,7 @@
 	"cpu": [
 		"x64"
 	],
+	"dependencies": {},
 	"devDependencies": {
 		"@playform/build": "0.2.0"
 	},
@@ -27,7 +28,7 @@
 	],
 	"license": "SEE LICENSE IN LICENSE",
 	"main": "cli.win32-x64-msvc.node",
-	"name": "@tauri-apps/cli-win32-x64-msvc",
+	"name": "@codeeditorland/cli-win32-x64-msvc",
 	"os": [
 		"win32"
 	],
