--- a/crates/tauri-cli/templates/plugin/__example-api/tauri-app/package.json
+++ b/crates/tauri-cli/templates/plugin/__example-api/tauri-app/package.json
@@ -1,36 +1,27 @@
 {
-	"author": {
-		"email": "Source/Open@Editor.Land",
-		"name": "🖋️ Source — 👐🏻 Open —",
-		"url": "HTTPS://Editor.Land"
-	},
-	"bugs": {
-		"url": "HTTPS://GitHub.Com/CodeEditorLand/Tauri/issues"
-	},
-	"dependencies": {
-		"@codeeditorland/api": "2.1.1",
-		"tauri-plugin-{{ plugin_name }}-api": "file:../../"
-	},
-	"devDependencies": {
-		"@codeeditorland/cli": "2.1.0",
-		"@playform/build": "0.2.0"
-	},
-	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/Tauri#readme",
+	"name": "@codeeditorland/app",
+	"version": "0.0.1",
+	"private": false,
 	"keywords": [
 		"codeeditorland",
 		"land",
 		"playform"
 	],
-	"license": "SEE LICENSE IN LICENSE",
-	"name": "tauri-app",
-	"private": false,
-	"publishConfig": {
-		"access": "public"
+	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/Tauri#readme",
+	"bugs": {
+		"url": "HTTPS://GitHub.Com/CodeEditorLand/Tauri/issues"
 	},
 	"repository": {
 		"type": "git",
 		"url": "git+HTTPS://github.com/CodeEditorLand/Tauri.git"
 	},
+	"license": "SEE LICENSE IN LICENSE",
+	"author": {
+		"name": "🖋️ Source — 👐🏻 Open —",
+		"email": "Source/Open@Editor.Land",
+		"url": "HTTPS://Editor.Land"
+	},
+	"type": "module",
 	"scripts": {
 		"build": "vite build",
 		"dev": "vite",
@@ -38,6 +29,15 @@
 		"preview": "vite preview",
 		"tauri": "tauri"
 	},
-	"type": "module",
-	"version": "0.0.1"
+	"dependencies": {
+		"@codeeditorland/api": "0.0.1",
+		"@codeeditorland/plugin-{{ plugin_name }}-api": "file:../../"
+	},
+	"devDependencies": {
+		"@codeeditorland/cli": "0.0.1",
+		"@playform/build": "0.2.0"
+	},
+	"publishConfig": {
+		"access": "public"
+	}
 }
