--- a/examples/resources/package.json
+++ b/examples/resources/package.json
@@ -1,5 +1,27 @@
 {
 	"name": "resources",
+	"version": "0.0.1",
+	"private": false,
+	"keywords": [
+		"codeeditorland",
+		"land",
+		"playform"
+	],
+	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/Tauri#readme",
+	"bugs": {
+		"url": "HTTPS://GitHub.Com/CodeEditorLand/Tauri/issues"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+HTTPS://github.com/CodeEditorLand/Tauri.git"
+	},
+	"license": "SEE LICENSE IN LICENSE",
+	"author": {
+		"name": "🖋️ Source — 👐🏻 Open —",
+		"email": "Source/Open@Editor.Land",
+		"url": "HTTPS://Editor.Land"
+	},
+	"type": "module",
 	"scripts": {
 		"prepublishOnly": "Build 'Source/**/*.ts'",
 		"tauri": "node ../../packages/cli/tauri.js"
@@ -7,5 +29,8 @@
 	"dependencies": {},
 	"devDependencies": {
 		"@playform/build": "0.2.0"
+	},
+	"publishConfig": {
+		"access": "public"
 	}
 }
