--- a/packages/cli/npm/darwin-arm64/package.json
+++ b/packages/cli/npm/darwin-arm64/package.json
@@ -1,8 +1,30 @@
 {
 	"name": "@codeeditorland/cli-darwin-arm64",
+	"version": "0.0.1",
+	"private": false,
+	"keywords": [
+		"codeeditorland",
+		"land",
+		"playform"
+	],
+	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/Tauri#readme",
+	"bugs": {
+		"url": "HTTPS://GitHub.Com/CodeEditorLand/Tauri/issues"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+HTTPS://github.com/CodeEditorLand/Tauri.git"
+	},
+	"license": "SEE LICENSE IN LICENSE",
+	"author": {
+		"name": "🖋️ Source — 👐🏻 Open —",
+		"email": "Source/Open@Editor.Land",
+		"url": "HTTPS://Editor.Land"
+	},
 	"contributors": [
 		"Tauri Programme within The Commons Conservancy"
 	],
+	"type": "module",
 	"main": "cli.darwin-arm64.node",
 	"files": [
 		"cli.darwin-arm64.node"
@@ -19,5 +41,8 @@
 	],
 	"cpu": [
 		"arm64"
-	]
+	],
+	"publishConfig": {
+		"access": "public"
+	}
 }
