--- a/examples/api/package.json
+++ b/examples/api/package.json
@@ -33,8 +33,8 @@
 		"@codeeditorland/api": "../../packages/api/dist"
 	},
 	"devDependencies": {
-		"@iconify-json/codicon": "^1.2.6",
-		"@iconify-json/ph": "^1.2.1",
+		"@iconify-json/codicon": "1.2.6",
+		"@iconify-json/ph": "1.2.1",
 		"@playform/build": "0.2.0",
 		"@unocss/extractor-svelte": "0.65.1",
 		"unocss": "0.65.1"
