--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -50,7 +50,7 @@
 	"devDependencies": {
 		"@napi-rs/cli": "2.18.3",
 		"@playform/build": "0.2.0",
-		"@types/node": "^22.10.1",
+		"@types/node": "22.10.1",
 		"cross-env": "7.0.3"
 	},
 	"publishConfig": {
