--- a/examples/api/package.json
+++ b/examples/api/package.json
@@ -33,11 +33,11 @@
 		"@codeeditorland/api": "../../packages/api/dist"
 	},
 	"devDependencies": {
-		"@iconify-json/codicon": "^1.2.8",
-		"@iconify-json/ph": "^1.2.2",
+		"@iconify-json/codicon": "1.2.8",
+		"@iconify-json/ph": "1.2.2",
 		"@playform/build": "0.2.1",
-		"@unocss/extractor-svelte": "^0.65.4",
-		"unocss": "^0.65.4"
+		"@unocss/extractor-svelte": "0.65.4",
+		"unocss": "0.65.4"
 	},
 	"publishConfig": {
 		"access": "public"
