--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -58,10 +58,10 @@
 	"dependencies": {},
 	"devDependencies": {
 		"@playform/build": "0.2.1",
-		"@types/node": "^22.10.1",
+		"@types/node": "22.10.1",
 		"fast-glob": "3.3.3",
-		"globals": "^15.4.0",
-		"tslib": "^2.6.3"
+		"globals": "15.4.0",
+		"tslib": "2.6.3"
 	},
 	"publishConfig": {
 		"access": "public"
